Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -233,3 +233,44 @@ Number  Start (sector)    End (sector)  Size       Code  Name
 
 # Удаление раздела
 
+Чтобы удалить раздел, введите `d` и номер раздела. В отличие от `fdisk`, первый раздел не будет автоматически выбран, если он единственный на диске. На GPT-дисках разделы можно легко переупорядочить или «отсортировать», чтобы избежать пробелов в последовательности нумерации. Для этого просто используйте команду `s`. Например, представьте себе диск со следующей таблицей разделов:
+```
+Number  Start (sector)    End (sector)  Size       Code  Name
+   1            2048         2099199   1024.0 MiB  8300  Linux filesystem
+   2         2099200         2361343   128.0 MiB   8300  Linux filesystem
+   3         2361344         2623487   128.0 MiB   8300  Linux filesystem
+```
+Если вы удалите второй раздел, таблица станет:
+```
+Number  Start (sector)    End (sector)  Size       Code  Name
+   1            2048         2099199   1024.0 MiB  8300  Linux filesystem
+   3         2361344         2623487   128.0 MiB   8300  Linux filesystem
+```
+Если вы воспользуетесь командой `s`, она станет:
+```
+Number  Start (sector)    End (sector)  Size       Code  Name
+   1            2048         2099199   1024.0 MiB  8300  Linux filesystem
+   2         2361344         2623487   128.0 MiB   8300  Linux filesystem
+```
+Обратите внимание, что третий раздел стал вторым.
+
+
+# Gap? что за Gap?
+
+В отличие от дисков MBR, при создании раздела на дисках GPT размер не ограничивается максимальным объемом непрерывного нераспределенного пространства. Вы можете использовать каждый последний бит свободного сектора, независимо от того, где он находится на диске.
+
+
+# Варианты восстановления
+
+На дисках GPT хранятся резервные копии заголовка GPT и таблицы разделов, что упрощает восстановление дисков в случае повреждения этих данных. `gdisk` предоставляет функции для помощи в этих задачах восстановления, доступ к которым осуществляется с помощью команды `r`.
+
+Вы можете восстановить поврежденный основной заголовок GPT или таблицу разделов с помощью `b` и `c`, соответственно, или использовать основной заголовок и таблицу для восстановления резервной копии с помощью `d` и `e`. Вы также можете преобразовать MBR в GPT с помощью f и сделать наоборот с помощью g, среди других операций. Ввдеите команду ? в меню восстановления, чтобы получить список всех доступных команд восстановления и описания того, что они делают.
+
+
+# Создание файловых систем
+
+Разбиение диска на разделы - это только первый шаг к использованию диска. После этого вам нужно будет отформатировать раздел с файловой системой, прежде чем использовать его для хранения данных.
+
+Файловая система контролирует, как данные хранятся и доступны на диске. Linux поддерживает множество файловых систем, некоторые из которых являются собственными, например, семейство ext (Extended Filesystem), а другие происходят из других операционных систем, таких как FAT из MS-DOS, NTFS из Windows NT, HFS и HFS + из Mac OS и т. д.
+
+Стандартный инструмент, используемый для создания файловой системы в Linux, - это mkfs, который имеет множество «разновидностей» в зависимости от файловой системы, с которой ему нужно работать.
