Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -274,3 +274,39 @@ Number  Start (sector)    End (sector)  Size       Code  Name
 Файловая система контролирует, как данные хранятся и доступны на диске. Linux поддерживает множество файловых систем, некоторые из которых являются собственными, например, семейство ext (Extended Filesystem), а другие происходят из других операционных систем, таких как FAT из MS-DOS, NTFS из Windows NT, HFS и HFS + из Mac OS и т. д.
 
 Стандартный инструмент, используемый для создания файловой системы в Linux, - это mkfs, который имеет множество «разновидностей» в зависимости от файловой системы, с которой ему нужно работать.
+
+
+# Создание файловой системы ext2 / ext3 / ext4
+
+*Extended Filesystem* (ext) была первой файловой системой для Linux, и с годами была заменена новыми версиями под названием ext2, ext3 и ext4, которая в настоящее время является файловой системой по умолчанию для многих дистрибутивов Linux. Утилиты `mkfs.ext2`, `mkfs.ext3` и `mkfs.ext4` используются для создания файловых систем ext2, ext3 и ext4. Фактически, все эти «утилиты» существуют только как символические ссылки на другую утилиту под названием `mke2fs`. `mke2fs` изменяет свои значения по умолчанию в соответствии с именем, которым он вызван. Таким образом, все они имеют одинаковое поведение и параметры командной строки.
+
+Самая простая форма использования:
+```
+# mkfs.ext2 TARGET
+```
+
+Где `TARGET` - это имя раздела, в котором должна быть создана файловая система. Например, для создания файловой системы ext3 на `/dev/sdb1` команда будет выглядеть так:
+```
+# mkfs.ext3 /dev/sdb1
+```
+Вместо использования команды, соответствующей файловой системе, которую вы хотите создать, вы можете передать `mke2fs` параметр `-t`, за которым следует имя файловой системы. Например, следующие команды эквивалентны и создадут файловую систему ext4 на `/dev/sdb1`.
+```
+# mkfs.ext4 /dev/sdb1
+# mke2fs -t ext4 /dev/sdb1
+```
+
+
+# Параметры командной строки
+
+`mke2fs` поддерживает широкий спектр параметров и опций командной строки. Вот некоторые из наиболее значимых. Все они также применимы к `mkfs.ext2`, `mkfs.ext3` и `mkfs.ext4`:
+
+* `-b SIZE` - Устанавливает размер блоков данных в устройстве на `SIZE`, который может составлять 1024, 2048 или 4096 байтов на блок.
+* `-c` - Проверяет целевое устройство на наличие bad-блоков перед созданием файловой системы. Вы можете выполнить тщательную, но гораздо более медленную проверку, дважды передав этот параметр, как в `mkfs.ext4 -c -c TARGET`.
+* `-d DIRECTORY` - Копирует содержимое указанного каталога в корень новой файловой системы. Полезно, если вам нужно «предварительно заполнить» диск предопределенным набором файлов.
+* `-F` - Опасно, Уилл Робинсон! Эта опция заставит mke2fs создать файловую систему, даже если другие параметры, переданные ей или цели, опасны или вообще не имеют смысла. Если указано дважды (как в `-F -F`), его можно даже использовать для создания файловой системы на устройстве, которое смонтировано или используется, что очень и очень плохо.
+* `-L VOLUME_LABEL` - Устанавливает метку тома на ту, которая указана в `VOLUME_LABEL`. Этот ярлык должен состоять не более чем из 16 символов.
+* `-n` - Это действительно полезная опция, которая имитирует создание файловой системы и показывает, что было бы сделано, если бы она была выполнена без опции `n`. Считайте это «пробным» режимом. Хорошо бы все проверить, прежде чем вносить какие-либо изменения на диск.
+* `-q` - Тихий режим. `mke2fs` будет работать нормально, но не будет выводить данные на терминал. Полезно при запуске `mke2fs` из скрипта.
+* `-U ID` - Это установит UUID (универсальный уникальный идентификатор) раздела на значение, указанное как ID. UUID - это 128-битные числа в шестнадцатеричной системе счисления, которые служат для однозначной идентификации раздела в операционной системе. Этот номер указывается в виде 32-значной строки в формате 8-4-4-4-12, что означает 8 цифр, дефис, 4 цифры, дефис, 4 цифры, дефис, 4 цифры, дефис, 12 цифр, например `D249E380- 7719-45A1-813C-35186883987E`. Вместо идентификатора вы также можете указать параметры, такие как `clear`, чтобы очистить UUID файловой системы, `random`, чтобы использовать случайно сгенерированный UUID, или `time`, чтобы создать UUID на основе времени.
+* `-V` - Подробный режим, во время работы выводится гораздо больше информации, чем обычно. Полезно для отладки.
+
