Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -310,3 +310,29 @@ Number  Start (sector)    End (sector)  Size       Code  Name
 * `-U ID` - Это установит UUID (универсальный уникальный идентификатор) раздела на значение, указанное как ID. UUID - это 128-битные числа в шестнадцатеричной системе счисления, которые служат для однозначной идентификации раздела в операционной системе. Этот номер указывается в виде 32-значной строки в формате 8-4-4-4-12, что означает 8 цифр, дефис, 4 цифры, дефис, 4 цифры, дефис, 4 цифры, дефис, 12 цифр, например `D249E380- 7719-45A1-813C-35186883987E`. Вместо идентификатора вы также можете указать параметры, такие как `clear`, чтобы очистить UUID файловой системы, `random`, чтобы использовать случайно сгенерированный UUID, или `time`, чтобы создать UUID на основе времени.
 * `-V` - Подробный режим, во время работы выводится гораздо больше информации, чем обычно. Полезно для отладки.
 
+
+# Создание файловой системы XFS
+
+XFS - это высокопроизводительная файловая система, первоначально разработанная Silicon Graphics в 1993 году для своей операционной системы IRIX. Благодаря своим характеристикам производительности и надежности, он обычно используется для серверов и других сред, требующих высокой (или гарантированной) пропускной способности файловой системы.
+
+Инструменты для управления файловыми системами XFS являются частью пакета xfsprogs. Этот пакет может потребоваться установить вручную, поскольку он не включен по умолчанию в некоторые дистрибутивы Linux. Другие, например Red Hat Enterprise Linux 7, используют XFS в качестве файловой системы по умолчанию.
+
+Файловые системы XFS разделены как минимум на 2 части: раздел журнала, в котором ведется журнал всех операций файловой системы (обычно называемый журналом), и раздел данных. Раздел журнала может быть расположен внутри раздела данных (поведение по умолчанию) или даже на отдельном диске, для повышения производительности и надежности.
+
+Самая простая команда для создания файловой системы XFS - это `mkfs.xfs TARGET`, где `TARGET` - это раздел, в котором должна быть создана файловая система. Например: `mkfs.xfs /dev/sda1`.
+
+Как и `mke2fs`, `mkfs.xfs` поддерживает ряд параметров командной строки. Вот некоторые из самых распространенных.
+
+* `-b size=VALUE` - Устанавливает размер блока в файловой системе в байтах на значение, указанное в `VALUE`. Значение по умолчанию - 4096 байт (4 КиБ), минимальное - 512, максимальное - 65536 (64 КиБ).
+* `-m crc=VALUE` - Параметры, начинающиеся с `-m`, являются параметрами метаданных. Это включает (если `VALUE` равно `1`) или отключает (если `VALUE` равно `0`) использование проверок CRC32c для проверки целостности всех метаданных на диске. Это обеспечивает лучшее обнаружение ошибок и восстановление после сбоев, связанных с аппаратными проблемами, поэтому по умолчанию эта функция включена. Влияние этой проверки на производительность должно быть минимальным, поэтому обычно нет причин отключать ее.
+* `-m uuid=VALUE` - Устанавливает UUID раздела равным значению VALUE. Помните, что UUID - это 32-символьные (128-битные) числа в шестнадцатеричной системе счисления, указанные в группах из 8, 4, 4, 4 и 12 цифр, разделенных тире, например `1E83E3A3-3AE9-4AAC-BF7E-29DFFECD36C0`.
+* `-f` - Принудительно создать файловую систему на целевом устройстве, даже если на нем обнаружена файловая система.
+* `-l logdev=DEVICE` - Это поместит раздел журнала файловой системы на указанное устройство, а не в раздел данных.
+* `-l size=VALUE` - Он установит размер раздела журнала равным значению, указанному в `VALUE`. Размер может быть указан в байтах, и могут использоваться суффиксы, такие как `m` или `g`. `-l size = 10m`, например, ограничит раздел журнала до 10 мегабайт.
+* `-q` - Тихий режим. В этом режиме `mkfs.xfs` не печатает параметры создаваемой файловой системы.
+* `-L LABEL` - Устанавливает метку файловой системы, длина которой не может превышать 12 символов.
+* `-N` - Подобно параметру `-n` в `mke2fs`, заставит `mkfs.xfs` вывести все параметры для создания файловой системы, фактически не создавая ее.
+
+
+# Создание файловой системы FAT или VFAT
+
