Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -347,3 +347,30 @@ VFAT - это расширение формата FAT16 с поддержкой 
 Как и другие утилиты, `mkfs.fat` поддерживает ряд параметров командной строки. Ниже приведены наиболее важные из них. Полный список и описание каждой опции можно прочитать в руководстве к утилите с помощью команды `man mkfs.fat`.
 
 `-c` - Проверяет целевое устройство на наличие bad-блоков перед созданием файловой системы.
+`-C FILENAME BLOCK_COUNT` - Создает файл, указанный в `FILENAME`, а затем создает внутри него файловую систему FAT, эффективно создавая пустой «образ диска», который впоследствии можно записать на устройство с помощью такой утилиты, как `dd`, или смонтировать как устройство обратной связи. При использовании этой опции количество блоков в файловой системе (`BLOCK_COUNT`) должно быть указано после имени устройства.
+`-F SIZE` - Выбирает размер FAT (таблицы размещения файлов) между 12, 16 или 32, то есть между FAT12, FAT16 или FAT32. Если не указан, `mkfs.fat` выберет соответствующий вариант в зависимости от размера файловой системы.
+`-n NAME` - Устанавливает метку тома или имя для файловой системы. Это может быть до 11 символов, по умолчанию имя отсутствует.
+`-v` - Подробный режим. Печатает гораздо больше информации, чем обычно, полезной для отладки.
+>`mkfs.fat` не может создать «загрузочную» файловую систему. Согласно странице руководства, «это не так просто, как вы думаете» и не будет реализовано.
+
+
+# Создание файловой системы exFAT
+
+exFAT - это файловая система, созданная Microsoft в 2006 году, которая устраняет одно из наиболее важных ограничений FAT32: размер файла и диска. В exFAT максимальный размер файла составляет 16 эксабайт (с 4 ГБ в FAT32), а максимальный размер диска - 128 петабайт.
+
+Поскольку он хорошо поддерживается всеми тремя основными операционными системами (Windows, Linux и Mac OS), это хороший выбор там, где требуется совместимость, например, на флэш-накопителях большой емкости, картах памяти и внешних дисках. Фактически, это файловая система по умолчанию, как определено SD Association, для карт памяти SDXC размером более 32 ГБ.
+
+Утилита по умолчанию для создания файловых систем exFAT - `mkfs.exfat`, которая является ссылкой на `mkexfatfs`. Самая простая команда - это `mkfs.exfat TARGET`, где `TARGET` - это раздел, в котором должна быть создана файловая система. Например: `mkfs.exfat/dev/sdb2`.
+
+В отличие от других утилит, обсуждаемых в этом уроке, у `mkfs.exfat` очень мало параметров командной строки. Они есть:
+
+`-i VOL_ID` - Устанавливает для идентификатора тома значение, указанное в `VOL_ID`. Это 32-битное шестнадцатеричное число. Если не определен, устанавливается идентификатор на основе текущего времени.
+`-n NAME` - Устанавливает метку тома или имя. Он может содержать до 15 символов, по умолчанию имя отсутствует.
+`-p SECTOR` - Задает первый сектор первого раздела на диске. Это необязательное значение, по умолчанию оно равно нулю.
+`-s SECTORS` - Определяет количество физических секторов на кластер распределения. Это должно быть степень двойки, например 1, 2, 4, 8 и т. д.
+
+
+# Знакомство с файловой системой Btrfs
+
+
+
