--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -346,9 +346,15 @@ VFAT - это расширение формата FAT16 с поддержкой 
 
 Как и другие утилиты, `mkfs.fat` поддерживает ряд параметров командной строки. Ниже приведены наиболее важные из них. Полный список и описание каждой опции можно прочитать в руководстве к утилите с помощью команды `man mkfs.fat`.
 
-* `-c` Проверяет целевое устройство на наличие bad-блоков перед созданием файловой системы.
-* `-C FILENAME BLOCK_COUNT` Создает файл, указанный в `FILENAME`, а затем создает внутри него файловую систему FAT, эффективно создавая пустой «образ диска», который впоследствии можно записать на устройство с помощью такой утилиты, как `dd`, или смонтировать как устройство обратной связи. При использовании этой опции количество блоков в файловой системе (`BLOCK_COUNT`) должно быть указано после имени устройства.
-* `-F SIZE` Выбирает размер FAT (таблицы размещения файлов) между 12, 16 или 32, то есть между FAT12, FAT16 или FAT32. Если не указан, `mkfs.fat` выберет соответствующий вариант в зависимости от размера файловой системы.
+* `-c` 
+
+Проверяет целевое устройство на наличие bad-блоков перед созданием файловой системы.
+* `-C FILENAME BLOCK_COUNT` 
+
+Создает файл, указанный в `FILENAME`, а затем создает внутри него файловую систему FAT, эффективно создавая пустой «образ диска», который впоследствии можно записать на устройство с помощью такой утилиты, как `dd`, или смонтировать как устройство обратной связи. При использовании этой опции количество блоков в файловой системе (`BLOCK_COUNT`) должно быть указано после имени устройства.
+* `-F SIZE` 
+
+Выбирает размер FAT (таблицы размещения файлов) между 12, 16 или 32, то есть между FAT12, FAT16 или FAT32. Если не указан, `mkfs.fat` выберет соответствующий вариант в зависимости от размера файловой системы.
 
 `-n NAME`
 
