Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -617,3 +617,130 @@ Number  Start   End     Size    Type     File system     Flags
 
 
 # Удаление раздела
+
+Чтобы удалить раздел, используйте команду `rm`, за которой следует номер раздела, который можно отобразить с помощью команды `print`. Таким образом, `rm 2` удалит второй раздел на текущем выбранном диске.
+
+
+# Восстановление разделов
+
+`parted` может восстановить удаленный раздел. Предположим, у вас есть следующая структура разделов:
+```
+Number  Start   End     Size    File system  Name     Flags
+ 1      1049kB  99.6MB  98.6MB  ext4         primary
+ 2      99.6MB  200MB   100MB   ext4         primary
+ 3      200MB   300MB   99.6MB  ext4         primary
+```
+Случайно вы удалили раздел 2 с помощью `rm 2`. Чтобы восстановить его, вы можете использовать команду `rescue` с синтаксисом `rescue START END`, где `START` - это приблизительное место, где начался раздел, а `END` - приблизительное место, где он закончился.
+
+`parted` просканирует диск в поисках разделов и предложит восстановить все найденные разделы. В приведенном выше примере размер раздела 2 начинается с 99,6 МБ и заканчивается 200 МБ. Таким образом, вы можете использовать следующую команду для восстановления раздела:
+```
+(parted) rescue 90m 210m
+Information: A ext4 primary partition was found at 99.6MB -> 200MB.
+Do you want to add it to the partition table?
+
+Yes/No/Cancel? y
+```
+Это восстановит раздел и его содержимое. Обратите внимание, что `rescue` может восстанавливать только разделы, на которых установлена файловая система. Пустые разделы не обнаруживаются.
+
+
+# Изменение размера разделов ext2/3/4
+
+`parted` можно использовать для изменения размера разделов, чтобы сделать их больше или меньше. Однако есть некоторые предостережения:
+* Во время изменения размера раздел должен быть неиспользованным и отключенным. 
+* Вам нужно достаточно свободного места после раздела, чтобы увеличить его до желаемого размера.
+
+Команда - `resizepart`, за которой следует номер раздела и место, где он должен заканчиваться. Например, если у вас есть следующая таблица разделов:
+```
+Number  Start   End     Size    File system  Name     Flags
+ 1      1049kB  99.6MB  98.6MB  ext4         primary
+ 2      99.6MB  200MB   100MB   ext4
+ 3      200MB   300MB   99.6MB  ext4         primary
+```
+Попытка увеличить раздел `1` с помощью `resizepart` вызовет сообщение об ошибке, потому что с новым размером раздел `1` будет перекрываться с разделом `2`. Однако размер раздела `3` можно изменить, так как после него остается свободное место, что можно проверить с помощью команды `print free`:
+```
+(parted) print free
+Model: Kingston DataTraveler 2.0 (scsi)
+Disk /dev/sdb: 1999MB
+Sector size (logical/physical): 512B/512B
+Partition Table: gpt
+Disk Flags:
+
+ Number  Start   End     Size    File system  Name     Flags
+        17.4kB  1049kB  1031kB  Free Space
+ 1      1049kB  99.6MB  98.6MB  ext4         primary
+ 2      99.6MB  200MB   100MB   ext4
+ 3      200MB   300MB   99.6MB  ext4         primary
+        300MB   1999MB  1699MB  Free Space
+```
+Таким образом, вы можете использовать следующую команду для изменения размера раздела 3 до 350 МБ:
+```
+(parted) resizepart 3 350m
+
+(parted) print
+Model: Kingston DataTraveler 2.0 (scsi)
+Disk /dev/sdb: 1999MB
+Sector size (logical/physical): 512B/512B
+Partition Table: gpt
+Disk Flags:
+
+Number  Start   End     Size    File system  Name     Flags
+ 1      1049kB  99.6MB  98.6MB  ext4         primary
+ 2      99.6MB  200MB   100MB   ext4
+ 3      200MB   350MB   150MB   ext4         primary
+```
+Помните, что новая конечная точка указывается, отсчитывая от начала диска. Итак, поскольку раздел `3` заканчивался на 300 МБ, теперь он должен заканчиваться на 350 МБ.
+
+Но изменение размера раздела - это только часть задачи. Вам также необходимо изменить размер файловой системы, которая находится в ней. Для файловых систем ext2/3/4 это делается с помощью команды `resize2fs`. В случае приведенного выше примера, раздел `3` по-прежнему показывает «старый» размер при монтировании:
+```
+$ df -h /dev/sdb3
+Filesystem      Size  Used Avail Use% Mounted on
+/dev/sdb3        88M  1.6M   80M   2% /media/carol/part3
+```
+Для настройки размера можно использовать команду `resize2fs DEVICE SIZE`, где `DEVICE` соответствует разделу, размер которого вы хотите изменить, а `SIZE` - новому размеру. Если вы опустите параметр размера, он будет использовать все доступное пространство раздела. Перед изменением размера рекомендуется размонтировать раздел.
+
+В приведенном выше примере:
+```
+$ sudo resize2fs /dev/sdb3
+resize2fs 1.44.6 (5-Mar-2019)
+Resizing the filesystem on /dev/sdb3 to 146212 (1k) blocks.
+The filesystem on /dev/sdb3 is now 146212 (1k) blocks long.
+
+$ df -h /dev/sdb3
+Filesystem      Size  Used Avail Use% Mounted on
+/dev/sdb3       135M  1.6M  123M   2% /media/carol/part3
+```
+Чтобы *уменьшить* раздел, процесс нужно проделать в обратном порядке. *Сначала* вы изменяете размер файловой системы до нового, меньшего размера, затем вы изменяете размер самого раздела с помощью `parted`.
+
+>Обратите внимание, что при уменьшении разделов, если вы выполните действия в неправильном порядке, вы потеряете данные!
+
+В нашем примере:
+```
+# resize2fs /dev/sdb3 88m
+resize2fs 1.44.6 (5-Mar-2019)
+Resizing the filesystem on /dev/sdb3 to 90112 (1k) blocks.
+The filesystem on /dev/sdb3 is now 90112 (1k) blocks long.
+
+# parted /dev/sdb3
+(parted) resizepart 3 300m
+Warning: Shrinking a partition can cause data loss, are you sure
+you want to continue?
+
+Yes/No? y
+
+(parted) print
+Model: Kingston DataTraveler 2.0 (scsi)
+Disk /dev/sdb: 1999MB
+Sector size (logical/physical): 512B/512B
+Partition Table: gpt
+Disk Flags:
+
+Number  Start   End     Size    File system  Name     Flags
+ 1      1049kB  99.6MB  98.6MB  ext4         primary
+ 2      99.6MB  200MB   100MB   ext4
+ 3      200MB   300MB   99.7MB  ext4         primary
+```
+>Вместо того, чтобы указывать новый размер, вы можете использовать параметр `-M` для `resize2fs`, чтобы настроить размер файловой системы, чтобы она была достаточно большой для файлов на ней.
+
+
+# Создание разделов подкачки
+
