Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -744,3 +744,49 @@ Number  Start   End     Size    File system  Name     Flags
 
 # Создание разделов подкачки
 
+В Linux система может переставлять страницы памяти из ОЗУ на диск по мере необходимости, сохраняя их в отдельном пространстве, обычно реализованном как отдельный раздел на диске, который называется *swap partition*(разделом подкачки) или просто swap. Этот раздел должен быть определенного типа и настроен с помощью соответствующей утилиты (`mkswap`), прежде чем его можно будет использовать.
+
+Чтобы создать раздел подкачки с помощью `fdisk` или `gdisk`, просто действуйте так, как если бы вы создавали обычный раздел, как объяснялось ранее. Единственная разница в том, что вам нужно будет изменить тип раздела на *Linux swap*.
+
+* На `fdisk` используйте команду `t`. Выберите раздел, который вы хотите использовать, и измените его тип на `82`. Запишите изменения на диск и выйдите с помощью `w`.
+* На `gdisk` команда на изменение типа раздела также `t`, но код `8200`. Записать изменения на диск и выйти с помощью `w`.
+
+Если вы используете `parted`, во время создания раздел должен быть идентифицирован как раздел подкачки, просто используйте `linux-swap` в качестве типа файловой системы. Например, команда для создания раздела подкачки размером 500 МБ, начиная с 300 МБ на диске:
+```
+(parted) mkpart primary linux-swap 301m 800m
+```
+После того, как раздел создан и правильно идентифицирован, просто используйте `mkswap`, а затем устройство, представляющее раздел, который вы хотите использовать, например:
+```
+# mkswap /dev/sda2
+```
+Чтобы включить свопинг в этом разделе, используйте `swapon`, за которым следует имя устройства:
+```
+# swapon /dev/sda2
+```
+Точно так же `swapoff`, за которым следует имя устройства, отключит swap на этом устройстве.
+
+Linux также поддерживает использование файлов подкачки вместо разделов. Просто создайте пустой файл нужного размера с помощью `dd`, а затем используйте `mkswap` и `swapon` с этим файлом в качестве цели.
+
+Следующие команды создадут в текущем каталоге файл `myswap` размером 1 ГБ, заполненный нулями, а затем настроят и включат его как файл подкачки.
+
+Создайте файл подкачки:
+```
+$ dd if=/dev/zero of=myswap bs=1M count=1024
+1024+0 records in
+1024+0 records out
+1073741824 bytes (1.1 GB, 1.0 GiB) copied, 7.49254 s, 143 MB/s
+```
+`if=` - входной файл, источник данных, которые будут записаны в файл. В данном случае это устройство `/dev/zero`, которое предоставляет столько символов `NULL`, сколько требуется. `of=` - выходной файл, файл, который будет создан. `bs=` - это размер блоков данных, здесь указывается в мегабайтах, а `count=` - это количество блоков, которые должны быть записаны на вывод. 1024 блока по 1 MB равны 1 GB.
+```
+# mkswap myswap
+Setting up swapspace version 1, size = 1024 MiB (1073737728 bytes)
+no label, UUID=49c53bc4-c4b1-4a8b-a613-8f42cb275b2b
+
+# swapon myswap
+```
+Используя приведенные выше команды, этот файл подкачки будет использоваться только во время текущего системного сеанса. Если компьютер перезагрузится, файл останется доступным, но не будет загружен автоматически. Вы можете автоматизировать это, добавив новый файл подкачки в `/etc/fstab`, который мы обсудим на следующем уроке.
+
+>И `mkswap`, и `swapon` будут жаловаться, если ваш файл подкачки имеет небезопасные разрешения. Рекомендуемый флаг разрешения файла - `0600`. Владелец и группа должны быть `root`.
+
+# Упражнения для закрепления
+# Упражнения на размышления
