Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -788,5 +788,122 @@ no label, UUID=49c53bc4-c4b1-4a8b-a613-8f42cb275b2b
 
 >И `mkswap`, и `swapon` будут жаловаться, если ваш файл подкачки имеет небезопасные разрешения. Рекомендуемый флаг разрешения файла - `0600`. Владелец и группа должны быть `root`.
 
+
 # Упражнения для закрепления
+
+1. Какую схему разделения следует использовать для разделения жесткого диска емкостью 3 ТБ на три раздела по 1 ГБ? Почему?
+2. Используя `gdisk`, как мы можем узнать, сколько места доступно на диске?
+3. Какой была бы команда для создания файловой системы ext3, предварительно проверяя наличие плохих блоков, с меткой `MyDisk` и случайным UUID на устройстве `/dev/sdc1`?
+4. Используя `parted`, какова команда для создания раздела ext4 размером 300 МБ, начиная с 500 МБ на диске?
+5. Представьте, что у вас есть 2 раздела, один на `/dev/sda1`, а другой на `/dev/sda2`, размером 20 ГБ. Как вы можете использовать их в одной файловой системе Btrfs таким образом, чтобы содержимое одного раздела автоматически отображалось на другом, как при настройке RAID1? Насколько большой будет файловая система?
+
+
 # Упражнения на размышления
+
+1. Рассмотрим диск объемом 2 ГБ с таблицей разделов MBR и следующей компоновкой:
+```
+Disk /dev/sdb: 1.9 GiB, 1998631936 bytes, 3903578 sectors
+Disk model: DataTraveler 2.0
+Units: sectors of 1 * 512 = 512 bytes
+Sector size (logical/physical): 512 bytes / 512 bytes
+I/O size (minimum/optimal): 512 bytes / 512 bytes
+Disklabel type: dos
+Disk identifier: 0x31a83a48
+
+Device     Boot   Start     End Sectors  Size Id Type
+/dev/sdb1          2048 1050623 1048576  512M 83 Linux
+/dev/sdb3       2099200 3147775 1048576  512M 83 Linux
+```
+Можете ли вы создать на нем раздел размером 600 Мбайт? Почему?
+
+2. На диске в `/dev/sdc` у нас есть первый раздел размером 1 ГБ, содержащий около 256 МБ файлов. Используя `parted`, как вы можете уменьшить его, чтобы в нем было достаточно места для файлов?
+3. Представьте, что у вас есть диск в `/dev/sdb`, и вы хотите создать раздел подкачки размером 1 ГБ в его начале. Итак, используя parted, вы создаете раздел с `mkpart primary linux-swap 0 1024M`. Затем вы включаете свопинг на этом разделе с помощью `swapon /dev/sdb1`, но получаете следующее сообщение об ошибке: `swapon: /dev/sdb1: read swap header failed`. Что пошло не так?
+4. В ходе этого урока вы пробовали использовать некоторые команды в `parted`, но по ошибке удалили третий раздел на жестком диске. Вы знаете, что он появился после раздела UEFI 250 МБ и раздела подкачки 4 ГБ и имел размер 10 ГБ. Какую команду можно использовать для его восстановления?
+5. Представьте, что у вас есть неиспользуемый раздел размером 4 ГБ на `/dev/sda3`. При использовании `fdisk`, какой будет последовательность операций, чтобы превратить его в активный раздел подкачки?
+
+
+# Резюме
+
+На этом уроке вы узнали:
+* Как создать таблицу разделов MBR на диске с помощью fdisk и как использовать ее для создания и удаления разделов.
+* Как создать таблицу разделов MBR на диске с помощью gdisk и как использовать ее для создания и удаления разделов.
+* Как создать разделы ext2, ext3, ext4, XFS, VFAT и exFAT.
+* Как использовать parted для создания, удаления и восстановления разделов на дисках MBR и GPT.
+* Как использовать изменение размера разделов ext2, ext3, ext4 и Brts.
+* Как создавать, настраивать и активировать разделы подкачки и файлы подкачки.
+
+В этом уроке обсуждались следующие команды:
+* `fdisk`
+* `gdisk`
+* `mkfs.ext2`, `mkfs.ext3`, `mkfs.ext4`, `mkfs.xfs`, `mkfs.vfat` и `mkfs.exfat`
+* `parted`
+* `btrfs`
+* `mkswap`
+* `swapon` и `swapoff`
+
+
+# Ответы на упражнения для закрепления
+
+1. Какую схему разделения следует использовать для разделения жесткого диска емкостью 3 ТБ на три раздела по 1 ГБ? Почему?
+
+GPT, поскольку MBR поддерживает жесткие диски не более 2 ТБ.
+
+2. Используя `gdisk`, как мы можем узнать, сколько места доступно на диске?
+
+Используйте `p` (print). Общее свободное пространство будет отображаться в последней строке информации перед самой таблицей разделов.
+
+3. Какой была бы команда для создания файловой системы ext3, предварительно проверяя наличие плохих блоков, с меткой `MyDisk` и случайным UUID на устройстве `/dev/sdc1`?
+
+Команда будет выглядеть так: `mkfs.ext3 -c -L MyDisk -U random /dev/sdc1`. В качестве альтернативы вместо `mkfs.ext3` можно использовать `mk2efs -t ext3`.
+
+4. Используя `parted`, какова команда для создания раздела ext4 размером 300 МБ, начиная с 500 МБ на диске?
+
+Используйте `mkpart primary ext4 500m 800m`. Помните, что вам придется создать файловую систему с помощью `mkfs.ext4`, поскольку parted этого не делает.
+
+5. Представьте, что у вас есть 2 раздела, один на `/dev/sda1`, а другой на `/dev/sda2`, размером 20 ГБ. Как вы можете использовать их в одной файловой системе Btrfs таким образом, чтобы содержимое одного раздела автоматически отображалось на другом, как при настройке RAID1? Насколько большой будет файловая система?
+
+Используйте `mkfs.btrfs /dev/sda1 /dev/sdb1 -m raid1`. В результате файловая система будет размером 20 ГБ, так как один раздел действует просто как зеркало другого.
+
+
+# Ответы на упражнения для размышления
+
+
+1. Рассмотрим диск объемом 2 ГБ с таблицей разделов MBR и следующей компоновкой:
+```
+Disk /dev/sdb: 1.9 GiB, 1998631936 bytes, 3903578 sectors
+Disk model: DataTraveler 2.0
+Units: sectors of 1 * 512 = 512 bytes
+Sector size (logical/physical): 512 bytes / 512 bytes
+I/O size (minimum/optimal): 512 bytes / 512 bytes
+Disklabel type: dos
+Disk identifier: 0x31a83a48
+
+Device     Boot   Start     End Sectors  Size Id Type
+/dev/sdb1          2048 1050623 1048576  512M 83 Linux
+/dev/sdb3       2099200 3147775 1048576  512M 83 Linux
+```
+Можете ли вы создать на нем раздел размером 600 Мбайт? Почему?
+
+Вы не можете, потому что не хватает непрерывного пространства. Первый признак того, что что-то «выключено» - это список устройств: у вас есть `/dev/sdb1` и `/dev/sdb3`, но нет `/dev/sdb2`. Итак, чего-то не хватает. Это «разрыв» в 1048577 секторов. 
+
+Затем вам нужно посмотреть, где заканчивается раздел и начинается другой. Первый раздел заканчивается в секторе `1050623`, а раздел 2 начинается в `2099200`. При 512 байтах на сектор это 536.871.424 байта. Если разделить его на 1024, получится 524,288 килобайт. Делим еще раз на 1024 и получаем… 512 МБ. Это размер «gap».
+
+Если на диске 2 ГБ, то мы располагаем максимум еще 512 МБ после раздела 3. Даже если у нас всего около 1 ГБ нераспределенного, самый большой непрерывный блок составляет 512 МБ. Значит, для раздела 600 МБ нет места.
+
+2. На диске в `/dev/sdc` у нас есть первый раздел размером 1 ГБ, содержащий около 256 МБ файлов. Используя `parted`, как вы можете уменьшить его, чтобы в нем было достаточно места для файлов?
+
+Это операция, состоящая из нескольких частей. Сначала вам нужно сжать файловую систему с помощью `resize2fs`. Вместо того, чтобы указывать новый размер напрямую, вы можете использовать параметр `-M`, чтобы он был просто «достаточно большим». Итак: `resize2fs -M /dev/sdc1`.
+
+Затем вы изменяете размер самого раздела с помощью `parted`, используя `resizepart`. Поскольку это первый раздел, можно предположить, что он начинается с нуля и заканчивается на 241 МБ. Итак, команда `resizepart 1 241M`.
+
+3. Представьте, что у вас есть диск в `/dev/sdb`, и вы хотите создать раздел подкачки размером 1 ГБ в его начале. Итак, используя parted, вы создаете раздел с `mkpart primary linux-swap 0 1024M`. Затем вы включаете свопинг на этом разделе с помощью `swapon /dev/sdb1`, но получаете следующее сообщение об ошибке: `swapon: /dev/sdb1: read swap header failed`. Что пошло не так?
+
+Вы создали раздел правильного типа (`linux-swap`), но помните, что `mkpart` не создает файловую систему. Вы забыли настроить раздел как пространство подкачки сначала с помощью `mkswap`, прежде чем использовать его.
+
+4. В ходе этого урока вы пробовали использовать некоторые команды в `parted`, но по ошибке удалили третий раздел на жестком диске. Вы знаете, что он появился после раздела UEFI 250 МБ и раздела подкачки 4 ГБ и имел размер 10 ГБ. Какую команду можно использовать для его восстановления?
+
+Не паникуйте, у вас есть вся информация, необходимая для восстановления раздела, просто воспользуйтесь `rescue` и произведите вычисления. До этого у вас было 250 МБ + 4,096 МБ (4 * 1024), поэтому начальная точка должна быть около 4346 МБ. Плюс размер 10,240 МБ (10 * 1024), он должен заканчиваться 14,586 МБ. Итак, спасение 4346m 14586m должно быть удачным. Возможно, вам придется немного «расслабиться» для спасения, начиная немного раньше и заканчивая немного позже, в зависимости от геометрии вашего диска.
+
+5. Представьте, что у вас есть неиспользуемый раздел размером 4 ГБ на `/dev/sda3`. При использовании `fdisk`, какой будет последовательность операций, чтобы превратить его в активный раздел подкачки?
+
+
