Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -902,8 +902,8 @@ Device     Boot   Start     End Sectors  Size Id Type
 
 4. В ходе этого урока вы пробовали использовать некоторые команды в `parted`, но по ошибке удалили третий раздел на жестком диске. Вы знаете, что он появился после раздела UEFI 250 МБ и раздела подкачки 4 ГБ и имел размер 10 ГБ. Какую команду можно использовать для его восстановления?
 
-Не паникуйте, у вас есть вся информация, необходимая для восстановления раздела, просто воспользуйтесь `rescue` и произведите вычисления. До этого у вас было 250 МБ + 4,096 МБ (4 * 1024), поэтому начальная точка должна быть около 4346 МБ. Плюс размер 10,240 МБ (10 * 1024), он должен заканчиваться 14,586 МБ. Итак, спасение 4346m 14586m должно быть удачным. Возможно, вам придется немного «расслабиться» для спасения, начиная немного раньше и заканчивая немного позже, в зависимости от геометрии вашего диска.
+Не паникуйте, у вас есть вся информация, необходимая для восстановления раздела, просто воспользуйтесь `rescue` и произведите вычисления. До этого у вас было 250 МБ + 4,096 МБ (4 * 1024), поэтому начальная точка должна быть около 4346 МБ. Плюс размер 10,240 МБ (10 * 1024), он должен заканчиваться 14,586 МБ. Итак, `rescue 4346m 14586m` должна дать положительный результат. Возможно, вам придется немного подожать во время восстановления, т. к. это может занять некоторое время, в зависимости от размера вашего диска.
 
 5. Представьте, что у вас есть неиспользуемый раздел размером 4 ГБ на `/dev/sda3`. При использовании `fdisk`, какой будет последовательность операций, чтобы превратить его в активный раздел подкачки?
 
-
+Сначала измените тип раздела на «Linux Swap» (82), запишите изменения на диск и выйдите. Затем используйте `mkswap`, чтобы настроить раздел как область подкачки. Затем используйте `swapon`, чтобы включить его.
