--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -844,31 +844,31 @@ Device     Boot   Start     End Sectors  Size Id Type
 
 # Ответы на упражнения для закрепления
 
-1. Какую схему разделения следует использовать для разделения жесткого диска емкостью 3 ТБ на три раздела по 1 ГБ? Почему?
+**1. Какую схему разделения следует использовать для разделения жесткого диска емкостью 3 ТБ на три раздела по 1 ГБ? Почему?
 
-GPT, поскольку MBR поддерживает жесткие диски не более 2 ТБ.
+>GPT, поскольку MBR поддерживает жесткие диски не более 2 ТБ.
 
-2. Используя `gdisk`, как мы можем узнать, сколько места доступно на диске?
+**2. Используя `gdisk`, как мы можем узнать, сколько места доступно на диске?
 
-Используйте `p` (print). Общее свободное пространство будет отображаться в последней строке информации перед самой таблицей разделов.
+>Используйте `p` (print). Общее свободное пространство будет отображаться в последней строке информации перед самой таблицей разделов.
 
-3. Какой была бы команда для создания файловой системы ext3, предварительно проверяя наличие плохих блоков, с меткой `MyDisk` и случайным UUID на устройстве `/dev/sdc1`?
+**3. Какой была бы команда для создания файловой системы ext3, предварительно проверяя наличие плохих блоков, с меткой `MyDisk` и случайным UUID на устройстве `/dev/sdc1`?
 
-Команда будет выглядеть так: `mkfs.ext3 -c -L MyDisk -U random /dev/sdc1`. В качестве альтернативы вместо `mkfs.ext3` можно использовать `mk2efs -t ext3`.
+>Команда будет выглядеть так: `mkfs.ext3 -c -L MyDisk -U random /dev/sdc1`. В качестве альтернативы вместо `mkfs.ext3` можно использовать `mk2efs -t ext3`.
 
-4. Используя `parted`, какова команда для создания раздела ext4 размером 300 МБ, начиная с 500 МБ на диске?
+**4. Используя `parted`, какова команда для создания раздела ext4 размером 300 МБ, начиная с 500 МБ на диске?
 
-Используйте `mkpart primary ext4 500m 800m`. Помните, что вам придется создать файловую систему с помощью `mkfs.ext4`, поскольку parted этого не делает.
+>Используйте `mkpart primary ext4 500m 800m`. Помните, что вам придется создать файловую систему с помощью `mkfs.ext4`, поскольку parted этого не делает.
 
-5. Представьте, что у вас есть 2 раздела, один на `/dev/sda1`, а другой на `/dev/sda2`, размером 20 ГБ. Как вы можете использовать их в одной файловой системе Btrfs таким образом, чтобы содержимое одного раздела автоматически отображалось на другом, как при настройке RAID1? Насколько большой будет файловая система?
+**5. Представьте, что у вас есть 2 раздела, один на `/dev/sda1`, а другой на `/dev/sda2`, размером 20 ГБ. Как вы можете использовать их в одной файловой системе Btrfs таким образом, чтобы содержимое одного раздела автоматически отображалось на другом, как при настройке RAID1? Насколько большой будет файловая система?
 
-Используйте `mkfs.btrfs /dev/sda1 /dev/sdb1 -m raid1`. В результате файловая система будет размером 20 ГБ, так как один раздел действует просто как зеркало другого.
+>Используйте `mkfs.btrfs /dev/sda1 /dev/sdb1 -m raid1`. В результате файловая система будет размером 20 ГБ, так как один раздел действует просто как зеркало другого.
 
 
 # Ответы на упражнения для размышления
 
 
-1. Рассмотрим диск объемом 2 ГБ с таблицей разделов MBR и следующей компоновкой:
+**1. Рассмотрим диск объемом 2 ГБ с таблицей разделов MBR и следующей компоновкой:
 ```
 Disk /dev/sdb: 1.9 GiB, 1998631936 bytes, 3903578 sectors
 Disk model: DataTraveler 2.0
@@ -890,20 +890,19 @@ Device     Boot   Start     End Sectors  Size Id Type
 
 >Если на диске 2 ГБ, то мы располагаем максимум еще 512 МБ после раздела 3. Даже если у нас всего около 1 ГБ нераспределенного, самый большой непрерывный блок составляет 512 МБ. Значит, для раздела 600 МБ нет места.
 
-2. На диске в `/dev/sdc` у нас есть первый раздел размером 1 ГБ, содержащий около 256 МБ файлов. Используя `parted`, как вы можете уменьшить его, чтобы в нем было достаточно места для файлов?
+**2. На диске в `/dev/sdc` у нас есть первый раздел размером 1 ГБ, содержащий около 256 МБ файлов. Используя `parted`, как вы можете уменьшить его, чтобы в нем было достаточно места для файлов?
 
 >Это операция, состоящая из нескольких частей. Сначала вам нужно сжать файловую систему с помощью `resize2fs`. Вместо того, чтобы указывать новый размер напрямую, вы можете использовать параметр `-M`, чтобы он был просто «достаточно большим». Итак: `resize2fs -M /dev/sdc1`.
-
 >Затем вы изменяете размер самого раздела с помощью `parted`, используя `resizepart`. Поскольку это первый раздел, можно предположить, что он начинается с нуля и заканчивается на 241 МБ. Итак, команда `resizepart 1 241M`.
 
-3. Представьте, что у вас есть диск в `/dev/sdb`, и вы хотите создать раздел подкачки размером 1 ГБ в его начале. Итак, используя parted, вы создаете раздел с `mkpart primary linux-swap 0 1024M`. Затем вы включаете свопинг на этом разделе с помощью `swapon /dev/sdb1`, но получаете следующее сообщение об ошибке: `swapon: /dev/sdb1: read swap header failed`. Что пошло не так?
+**3. Представьте, что у вас есть диск в `/dev/sdb`, и вы хотите создать раздел подкачки размером 1 ГБ в его начале. Итак, используя parted, вы создаете раздел с `mkpart primary linux-swap 0 1024M`. Затем вы включаете свопинг на этом разделе с помощью `swapon /dev/sdb1`, но получаете следующее сообщение об ошибке: `swapon: /dev/sdb1: read swap header failed`. Что пошло не так?
 
 >Вы создали раздел правильного типа (`linux-swap`), но помните, что `mkpart` не создает файловую систему. Вы забыли настроить раздел как пространство подкачки сначала с помощью `mkswap`, прежде чем использовать его.
 
-4. В ходе этого урока вы пробовали использовать некоторые команды в `parted`, но по ошибке удалили третий раздел на жестком диске. Вы знаете, что он появился после раздела UEFI 250 МБ и раздела подкачки 4 ГБ и имел размер 10 ГБ. Какую команду можно использовать для его восстановления?
+**4. В ходе этого урока вы пробовали использовать некоторые команды в `parted`, но по ошибке удалили третий раздел на жестком диске. Вы знаете, что он появился после раздела UEFI 250 МБ и раздела подкачки 4 ГБ и имел размер 10 ГБ. Какую команду можно использовать для его восстановления?
 
 >Не паникуйте, у вас есть вся информация, необходимая для восстановления раздела, просто воспользуйтесь `rescue` и произведите вычисления. До этого у вас было 250 МБ + 4,096 МБ (4 * 1024), поэтому начальная точка должна быть около 4346 МБ. Плюс размер 10,240 МБ (10 * 1024), он должен заканчиваться 14,586 МБ. Итак, `rescue 4346m 14586m` должна дать положительный результат. Возможно, вам придется немного подожать во время восстановления, т. к. это может занять некоторое время, в зависимости от размера вашего диска.
 
-5. Представьте, что у вас есть неиспользуемый раздел размером 4 ГБ на `/dev/sda3`. При использовании `fdisk`, какой будет последовательность операций, чтобы превратить его в активный раздел подкачки?
+**5. Представьте, что у вас есть неиспользуемый раздел размером 4 ГБ на `/dev/sda3`. При использовании `fdisk`, какой будет последовательность операций, чтобы превратить его в активный раздел подкачки?
 
 >Сначала измените тип раздела на «Linux Swap» (82), запишите изменения на диск и выйдите. Затем используйте `mkswap`, чтобы настроить раздел как область подкачки. Затем используйте `swapon`, чтобы включить его.
